[package]
name = "qafactorbacktest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.5.0"
stopwatch = "0.0.7"
itertools = "0.10.3"
rand = "0.8.0"
[dependencies.polars]
#version = "0.18.0"
git = "https://github.com/yutiansut/polars.git"
rev = "0bbc68f8ea2ae2cdc657b5c899c08677f2c5169c"

[dependencies.qapro-rs]

git = "https://github.com/yutiansut/quantaxis.git"


