[package]
name = "qafactorbacktest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.5.0"
stopwatch = "0.0.7"
itertools = "0.10.3"
rand = "0.8.0"
[dependencies.polars]
#version = "0.18.0"
git = "https://github.com/yutiansut/polars.git"
rev = "0bbc68f8ea2ae2cdc657b5c899c08677f2c5169c"
features = [
    "zip_with",
    "strings",
    "random",
    "object",
    "csv-file",
    "pretty_fmt",
    "performant",
    "dtype-full",
    "rows",
    "round_series",
    "is_first",
    "is_in",
    "asof_join",
    "cross_join",
    "dot_product",
    "concat_str",
    "row_hash",
    "reinterpret",
    "mode",
    "extract_jsonpath",
    "lazy",
    "lazy_regex",
    "cum_agg",
    "rolling_window",
    "interpolate",
    "list",
    "rank",
    "diff",
    "moment",
    "arange",
    "true_div",
    "dtype-categorical",
    "diagonal_concat",
    "abs",
    "parquet",
    "simd",
    "ewma",
    "dynamic_groupby",
    "horizontal_concat",
    "take_opt_iter",
    "sort_multiple",
    "dtype-full",
    "groupby_list",
    "avx512",
    "pivot",
    "pct_change"
]
[dependencies.qapro-rs]

git = "https://github.com/yutiansut/quantaxis.git"


